添加海量点点击的示例，以及Marker动画的示例，添加华为地图的示例module

--- a/sample-gaode/src/main/res/values/arrays.xml
+++ b/sample-gaode/src/main/res/values/arrays.xml
@@ -8,5 +8,7 @@
         <item>@string/gd_map_main_feature_item_smooth_move</item>
         <item>@string/gd_map_main_feature_item_drag_drop_select_point</item>
         <item>@string/gd_map_main_feature_item_route_plan</item>
+        <item>@string/gd_map_main_feature_item_multipoint_click</item>
+        <item>@string/gd_map_main_feature_item_marker_animation</item>
     </string-array>
 </resources>
