--- a/sample-gaode/src/main/res/values/arrays.xml
+++ b/sample-gaode/src/main/res/values/arrays.xml
@@ -6,9 +6,11 @@
         <item>@string/gd_map_main_feature_item_3dmap</item>
         <item>@string/gd_map_main_feature_item_blue_location</item>
         <item>@string/gd_map_main_feature_item_smooth_move</item>
+        <item>@string/gd_map_main_feature_item_movement_track</item>
         <item>@string/gd_map_main_feature_item_drag_drop_select_point</item>
         <item>@string/gd_map_main_feature_item_route_plan</item>
         <item>@string/gd_map_main_feature_item_multipoint_click</item>
         <item>@string/gd_map_main_feature_item_marker_animation</item>
+        <item>@string/gd_map_main_feature_item_cluster_effect</item>
     </string-array>
 </resources>
