增加播放运动轨迹结合的示例，类似:Keep的运动轨迹播放，增加线段动画和渐变色

--- a/sample-tencent/src/main/res/values/arrays.xml
+++ b/sample-tencent/src/main/res/values/arrays.xml
@@ -6,6 +6,7 @@
         <item>@string/tx_map_main_feature_item_blue_location</item>
         <item>@string/tx_map_main_feature_item_smooth_move</item>
         <item>@string/tx_map_main_feature_item_movement_track</item>
+        <item>@string/tx_map_main_feature_item_movement_track2</item>
         <item>@string/tx_map_main_feature_item_drag_drop_select_point</item>
         <item>@string/tx_map_main_feature_item_route_plan</item>
         <item>@string/tx_map_main_feature_item_multipoint_click</item>
