--- a/sample-baidu/src/main/res/values/arrays.xml
+++ b/sample-baidu/src/main/res/values/arrays.xml
@@ -6,8 +6,10 @@
         <item>@string/bd_map_main_feature_item_3d_prism</item>
         <item>@string/bd_map_main_feature_item_3d_model</item>
         <item>@string/bd_map_main_feature_item_blue_location</item>
+        <item>@string/bd_map_main_feature_item_track_move</item>
         <item>@string/bd_map_main_feature_item_smooth_move</item>
         <item>@string/bd_map_main_feature_item_movement_track</item>
+        <item>@string/bd_map_main_feature_item_movement_track2</item>
         <item>@string/bd_map_main_feature_item_drag_drop_select_point</item>
         <item>@string/bd_map_main_feature_item_route_plan</item>
         <item>@string/bd_map_main_feature_item_multipoint_click</item>
