1、升级百度地图SDK版本到7.5.7.1最新版本，百度地图修复 ：渐变线段无法回调点击事件的问题 2、更新3D棱柱和3D建筑物覆盖物以及示例

--- a/sample-baidu/src/main/res/values/arrays.xml
+++ b/sample-baidu/src/main/res/values/arrays.xml
@@ -4,6 +4,7 @@
         <item>@string/bd_map_main_feature_item_basic</item>
         <item>@string/bd_map_main_feature_item_overlay</item>
         <item>@string/bd_map_main_feature_item_3d_prism</item>
+        <item>@string/bd_map_main_feature_item_3d_build</item>
         <item>@string/bd_map_main_feature_item_3d_model</item>
         <item>@string/bd_map_main_feature_item_blue_location</item>
         <item>@string/bd_map_main_feature_item_track_move</item>
